# getBrain_headband_ncs_2xx

./: .gitignore  CMakeLists.txt  README.rst  nrf52840dk_nrf52840.overlay  prj.conf
components/ble_manager/: BLEManager.c  BLEManager.h
components/ble_manager/services/: gbdcs.c  gbdcs.h
components/common/: Std_Types.h
components/drivers/ads1299/: ads1299.c  ads1299.h  ads1299_cfg.c  ads1299_cfg.h  ads1299_def.h
src/: main.c  main.h
src/events/: ble_command_event.c  ble_command_event.h  eeg_measurement_event.c  eeg_measurement_event.h
src/modules/: ble_command.c  ble_eeg_notify.c  eeg_sensor.c
